--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,7 @@ install_requires =
     cfgv>=2.0.0
     identify>=1.0.0
     nodeenv>=0.11.1
+    psutil>=5.8.0
     pyyaml>=5.1
     virtualenv>=20.10.0
 python_requires = >=3.9
