--- a/tox.ini
+++ b/tox.ini
@@ -17,6 +17,9 @@ commands = pre-commit run --all-files --show-diff-on-failure
 [pep8]
 ignore = E265,E501,W504
 
+[flake8]
+max-line-length = 120
+
 [pytest]
 env =
     GIT_AUTHOR_NAME=test
