--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,10 @@ exclude =
 console_scripts =
     pre-commit = pre_commit.main:main
 
+[options.extras_require]
+tracing =
+    ddtrace
+
 [options.package_data]
 pre_commit.resources =
     *.tar.gz
